@@ -1505,7 +1505,7 @@ var ice_dictionary_mx = {
 	"Catch_property_points_to_finish": "Points to finish",
 	"Catch_property_count_errors": "Count errors",
 	"Iframe_info": "Este addon permite insertar los recursos HTML a la lección.",
-	"Iframe_name": "IFrame",
+	"Iframe_name": "Iframe",
 	"IFrame_property_iframe_url": "URL deIframe",
 	"IFrame_property_file_list" : "Lista de archivos",
 	"IFrame_property_file": "Archivo",
