@@ -1,3 +1,4 @@
+2017-10-16 Load button for list property in editor showed only for iframe module.
 2017-10-12 Fixed test configuration in Quiz module
 2017-10-12 Fixed bug with TextAudio still playing sound after closing popup with it
 2017-10-11 Fixed Programming Code Prompt module - enter now creates a new line.
